# copilot-auto-training

./: .coverage  .env.sample  .gitignore  AGENTS.md  README.md  requirements.txt  support.optimized.md  support.report.json
.agents/: MEMORY.md
.agents/skills/: .gitignore  agentv  engineer-code  engineer-copilot-agent  engineer-prompt  engineer-skill  judge-outcome  judge-rubric  judge-trajectory  researcher-research  trainer-election  trainer-optimize  trainer-research  trainer-synthesize  trainer-train  trainer-train-agent  trainer-train-code  trainer-train-prompt  trainer-train-skill
.devcontainer/: devcontainer.json  post-start.sh
.github/: copilot-instructions.md
.github/agents/: adversary.agent.md  conservator.agent.md  engineer.agent.md  judge.agent.md  prompt-evaluator.agent.md  regression-review.agent.md  researcher.agent.md  student.agent.md  teacher.agent.md  trainer.agent.md
.github/agents/evals/: evals.json
.github/aw/: actions-lock.json
.github/hooks/: agentic-workflow-validation.json  block-incomplete-prompt-workflows.sh  ensure-plugin-link-watcher.sh  ensure-skill-link-watcher.sh  prompt-optimization-validation.json  prompt-workflow-reminder.json  prompt-workflow-reminder.sh  skill-isolation-validation.json  sync-plugin-links.py  sync-skill-links.py  trainer-workspace.py  validate-agentic-workflow-compilation.sh  validate-prompt-optimization.sh  validate-skill-isolation.sh
.github/instructions/: agentic-workflow-editing.instructions.md  evals-dataset.instructions.md  prompt-optimization.instructions.md
.github/instructions/datasets/: train.jsonl
.github/instructions/evals/: evals.json
.github/plugin/: marketplace.json  plugin-sources.json
.github/skills/: .gitignore
.github/skills/trainer-election/: SKILL.md
.github/skills/trainer-research/: SKILL.md
.github/skills/trainer-synthesize/: SKILL.md
.github/workflows/: copilot-setup-steps.yml  optimize-next-prompt.lock.yml  optimize-next-prompt.md  refresh-gh-aw-workflow-lockfiles.yml  train-prompt.lock.yml  train-prompt.md  update-docs.lock.yml  update-docs.md
.github/workflows/shared/: agent-skills-runtime.md  repo-runtime-context.md  trainer-loop-contract.md
app/: app.py  optimize_skill.py
app/skills/optimize/: SKILL.md
copilot_runtime/: __init__.py  client.py  config.py  contract.py  provider.py
docs/: copilot-cli-plugins.md  copilot_execution_plan.md  dashboard.md  dspy-skill-artifacts.md  getting-started.md  troubleshooting.md
examples/first-run/: README.md
examples/first-run/datasets/: train.jsonl  val.jsonl
examples/first-run/prompts/: classify_support.md
optimize/: SKILL.md
optimize/references/: dataset-format.md
optimize/scripts/: run_optimize.py
plugins/copilot-training/: plugin.json
plugins/copilot-training/agents/: adversary.agent.md  conservator.agent.md  engineer.agent.md  evals  judge.agent.md  researcher.agent.md  student.agent.md  teacher.agent.md  trainer.agent.md
plugins/copilot-training/hooks/: agentic-workflow-validation.json  block-incomplete-prompt-workflows.sh  ensure-plugin-link-watcher.sh  ensure-skill-link-watcher.sh  prompt-optimization-validation.json  prompt-workflow-reminder.json  prompt-workflow-reminder.sh  skill-isolation-validation.json  sync-plugin-links.py  sync-skill-links.py  trainer-workspace.py  validate-agentic-workflow-compilation.sh  validate-prompt-optimization.sh  validate-skill-isolation.sh
plugins/copilot-training/mcps/: agent-skills-mcp
plugins/copilot-training/skills/: agentv  create-workflow  engineer-code  engineer-copilot-agent  engineer-prompt  engineer-skill  judge-outcome  judge-rubric  judge-trajectory  learn  researcher-research  trainer-election  trainer-optimize  trainer-research  trainer-synthesize  trainer-train  trainer-train-agent  trainer-train-code  trainer-train-prompt  trainer-train-skill
skills/agentv/: SKILL.md
skills/agentv/datasets/: train.jsonl  val.jsonl
skills/agentv/evals/: EVAL.yaml  evals.json
skills/agentv/references/: eval-yaml-schema.md  targets.md
skills/create-workflow/: README.md  SKILL.md
skills/create-workflow/assets/: workflow-template.md
skills/create-workflow/evals/: evals.json
skills/create-workflow/references/: gh-aw-authoring.md
skills/create-workflow/scripts/: README.md
skills/engineer-code/: README.md  SKILL.md
skills/engineer-code/assets/: README.md
skills/engineer-code/evals/: EVAL.yaml  evals.json
skills/engineer-code/references/: microsoft-trace-trainable-methods.md
skills/engineer-code/scripts/: README.md
skills/engineer-copilot-agent/: README.md  SKILL.md
skills/engineer-copilot-agent/datasets/: train.jsonl  val.jsonl
skills/engineer-prompt/: README.md  SKILL.md
skills/engineer-prompt/assets/: README.md
skills/engineer-skill/: README.md  SKILL.md
skills/judge-outcome/: README.md  SKILL.md
skills/judge-rubric/: README.md
skills/judge-trajectory/: README.md  SKILL.md
skills/learn/: README.md  SKILL.md
skills/optimize/: SKILL.md
skills/researcher-research/: README.md  SKILL.md
skills/trainer-election/: README.md  SKILL.md
skills/trainer-optimize/: README.md  SKILL.md
skills/trainer-research/: SKILL.md
skills/trainer-synthesize/: README.md  SKILL.md
skills/trainer-train/: README.md  SKILL.md
skills/trainer-train-agent/: README.md  SKILL.md
skills/trainer-train-code/: README.md  SKILL.md
skills/trainer-train-prompt/: README.md  SKILL.md
skills/trainer-train-skill/: README.md  SKILL.md
tests/: conftest.py  test_agent_skills_mcp.py  test_app.py  test_cli_plugins.py  test_copilot_inference.py  test_copilot_runtime.py  test_customizations.py  test_election.py  test_engineer_copilot_agent.py  test_engineer_prompt_export.py  test_engineer_prompt_optimizer.py  test_engineer_skill.py  test_evaluator.py  test_generate_jsonl.py  test_judge_rubric.py  test_requirements.py  test_research.py  test_run_optimize.py  test_skill_format.py  test_synthesize.py  test_systhesize.py  test_trace_training.py  test_utils.py
tools/agent-skills-mcp/: IMPLEMENTATION_PLAN.md  agent_skills_mcp.py  pyproject.toml  server.py
(+451 files in other folders)
