[project]
name = "agent-skills"
version = "0.1.0"
description = "Local MCP server that exposes repository agent skills as tools and resources."
requires-python = ">=3.11"
dependencies = [
	"mcp[cli]>=1.8.0",
	"pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
	"agent_skills_mcp.py",
	"server.py",
]

[tool.hatch.build.targets.sdist]
include = [
	"agent_skills_mcp.py",
	"server.py",
	"pyproject.toml",
]
